# wickra-gym

./: .gitattributes  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  clippy.toml  deny.toml  lychee.toml  osv-scanner.toml  repo-metadata.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/requirements/: ci-dev.in  ci-dev.txt
.github/scripts/: check-cbindgen.sh
.github/workflows/: bench.yml  ci.yml  release.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/src/: lib.rs
bindings/csharp/WickraGym/: DllResolver.cs  Env.cs  Native.cs  README.md  WickraGym.csproj
bindings/csharp/WickraGym.Tests/: EnvTests.cs  GoldenTests.cs  WickraGym.Tests.csproj
bindings/go/: README.md  env_test.go  go.mod  golden_test.go  wickra.go
bindings/go/include/: wickra_gym.h
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/org/wickra/gym/: Env.java  Native.java
bindings/java/src/test/java/org/wickra/gym/: EnvTest.java  GoldenTest.java
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__tests__/: completeness.test.js  env.test.js  golden.test.js
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-arm64-msvc/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/wickra_gym/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_completeness.py  test_golden.py  test_gymnasium.py  test_smoke.py
bindings/r/: DESCRIPTION  NAMESPACE  README.md
bindings/r/R/: env.R
bindings/r/src/: Makevars  Makevars.win  wickra_gym.c
bindings/r/tests/: run_tests.R
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: golden.test.js
crates/gym-bench/: Cargo.toml
crates/gym-bench/benches/: rollout.rs
crates/gym-cli/: Cargo.toml
crates/gym-cli/src/: args.rs  main.rs  run.rs
crates/gym-core/: Cargo.toml
crates/gym-core/src/: config.rs  env.rs  error.rs  feature.rs  indicator_set.rs  lib.rs  reward.rs  spec.rs  tensor.rs
crates/gym-core/tests/: conformance.rs  determinism.rs  golden.rs  proptest_invariants.rs
docs/: ACTIONS_REWARDS.md  Cookbook.md  GYMNASIUM.md  MICROSTRUCTURE.md  OBSERVATIONS.md
examples/: README.md
examples/c/: CMakeLists.txt  rollout.c  rollout.cpp
examples/csharp/Rollout/: Program.cs  Rollout.csproj
examples/data/: candles.json  candles_micro.json
examples/data/series/: BTCUSDT.csv
examples/data/specs/: logreturn.json  micro_book.json
examples/go/: go.mod  rollout.go
examples/java/: pom.xml
examples/java/src/main/java/org/wickra/gym/examples/: Rollout.java
examples/node/: package-lock.json  package.json  rollout.js
examples/python/: gymnasium_ppo.py  rollout.py
examples/r/: rollout.R
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: command_json.rs  spec_parse.rs  step_sequence.rs  tensor_build.rs
golden/: README.md  bless.py
golden/logreturn/: expected.json
golden/micro_book/: expected.json
golden/momentum_continuous/: spec.json
golden/momentum_discrete/: expected.json  spec.json
golden/sharpe/: expected.json  spec.json
