[package]
name = "wickra-gym-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
gym-core = { path = "../crates/gym-core" }

# Detach from the parent workspace — cargo-fuzz builds this crate on its own with
# sanitizer flags on a nightly toolchain.
[workspace]

[[bin]]
name = "spec_parse"
path = "fuzz_targets/spec_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "command_json"
path = "fuzz_targets/command_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tensor_build"
path = "fuzz_targets/tensor_build.rs"
test = false
doc = false
bench = false

[[bin]]
name = "step_sequence"
path = "fuzz_targets/step_sequence.rs"
test = false
doc = false
bench = false
