[package]
name = "wickra-gym-python"
description = "Python bindings for wickra-gym: a deterministic, Gymnasium-compatible backtest environment driven by a JSON command surface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
name = "_wickra_gym"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
gym-core = { workspace = true }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
